Seccion Principal (hero) hecha responsive.

--- a/ProyectoLandingPage/index.html
+++ b/ProyectoLandingPage/index.html
@@ -33,10 +33,18 @@
         </nav>
     </header>
     <div class="hero">
+        <img src="./src/img/portada.jpg" alt="Fondo">
         <div class="headings">
             <h1>New Mercedes CLS</h1>
-            <h4>The Power In Your Hands</h4>
+            <h2>The Power In Your Hands</h2>
         </div>
     </div>
+    <div class="cardsSection">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+
 </body>
 </html>
