--- a/index.html
+++ b/index.html
@@ -40,11 +40,67 @@
         </div>
     </div>
     <div class="cardsSection">
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="card">
+            <div class="cardTitles">
+                <h2>Electric</h2>
+                <h4>Merces E450 Cabriolet</h4>
+            </div>
+            <img src="./src/img/coche1.png" alt="Merces E450 Cabriolet">
+            <div class="cardButtons">
+                <button class="moreInfo">More info</button>
+                <div class="colorButtons">
+                    <button class="btnGray select"></button>
+                    <button class="btnRed"></button>
+                    <button class="btnBlue"></button>
+                    <button class="btnBlack"></button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardTitles">
+                <h2>Hybrid</h2>
+                <h4>Merces GLC SUV</h4>
+            </div>
+            <img src="./src/img/coche2.png" alt="Merces GLC SUV">
+            <div class="cardButtons">
+                <button class="moreInfo">More info</button>
+                <div class="colorButtons">
+                    <button class="btnBlack select"></button>
+                    <button class="btnYellow"></button>
+                    <button class="btnRed"></button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardTitles">
+                <h2>Hybrid</h2>
+                <h4>Merces Benz-G-Class</h4>
+            </div>
+            <img src="./src/img/coche3.png" alt="Merces Benz-G-Class">
+            <div class="cardButtons">
+                <button class="moreInfo">More info</button>
+                <div class="colorButtons">
+                    <button class="btnBlack select"></button>
+                    <button class="btnPurple"></button>
+                    <button class="btnSoftRed"></button>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="cardTitles">
+                <h2>Electric</h2>
+                <h4>Merces GLC SUV</h4>
+            </div>
+            <img src="./src/img/coche4.png" alt="Merces GLC SUV">
+            <div class="cardButtons">
+                <button class="moreInfo">More info</button>
+                <div class="colorButtons">
+                    <button class="btnBlack select"></button>
+                    <button class="btnYellow"></button>
+                    <button class="btnRed"></button>
+                </div>
+            </div>
+        </div>
     </div>
-
 </body>
 </html>
