--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             </ul>
             <div>
                 <div class="controlsMargin">
-                    <button></button>
                     <button>
                         <img src="./src/img/perfil.png" alt="Usuario">
                     </button>
@@ -32,14 +31,14 @@
             </div>
         </nav>
     </header>
-    <div class="hero">
+    <section class="hero">
         <img src="./src/img/portada.jpg" alt="Fondo">
         <div class="headings">
             <h1>New Mercedes CLS</h1>
             <h2>The Power In Your Hands</h2>
         </div>
-    </div>
-    <div class="cardsSection">
+    </section>
+    <section class="cardsSection">
         <div class="card">
             <div class="cardTitles">
                 <h2>Electric</h2>
@@ -101,6 +100,17 @@
                 </div>
             </div>
         </div>
-    </div>
+    </section>
+    <section class="textoMedio">
+        <h2><span>Find your nearest</span><br><span>Mercedes dealer you.</span></h2>
+        <p>Browse over 1000 dealers worldwide, and find the one that best suits your situation.</p>
+    </section>
+    <section class="sectionMap">
+        <!-- <img src="./src/img/fondoMapa.png" alt="fondoMapa"> -->
+        <div>
+            <h4>Discover your local Mercedes partner store</h4>
+            <button>Find a partner store near you</button>
+        </div>
+    </section>
 </body>
 </html>
