--- a/index.html
+++ b/index.html
@@ -112,5 +112,22 @@
             <button>Find a partner store near you</button>
         </div>
     </section>
+    <section class="overflowSection">
+        <div class="overCard">
+            <h2>Confort</h2>
+            <img src="./src/img/confort.jpg" alt="Confort">
+            <button class="moreInfo">More info</button>
+        </div>
+        <div class="overCard">
+            <h2>Technology</h2>
+            <img src="./src/img/technology.png" alt="Technology">
+            <button class="moreInfo">More info</button>
+        </div>
+        <div class="overCard">
+            <h2>Accesories</h2>
+            <img src="./src/img/accesories.jpg" alt="Accesories">
+            <button class="moreInfo">More info</button>
+        </div>
+    </section>
 </body>
 </html>
