Section fondo coche rojo terminada. Responsive hecho.

--- a/ProyectoLandingPage/index.html
+++ b/ProyectoLandingPage/index.html
@@ -112,21 +112,30 @@
             <button>Find a partner store near you</button>
         </div>
     </section>
-    <section class="overflowSection">
-        <div class="overCard">
-            <h2>Confort</h2>
-            <img src="./src/img/confort.jpg" alt="Confort">
-            <button class="moreInfo">More info</button>
+    <section class="overflowWrapper">
+        <div class="overflowSection">
+            <div class="overCard">
+                <h2>Confort</h2>
+                <img src="./src/img/confort.jpg" alt="Confort">
+                <button class="moreInfo">More info</button>
+            </div>
+            <div class="overCard">
+                <h2>Technology</h2>
+                <img src="./src/img/technology.png" alt="Technology">
+                <button class="moreInfo">More info</button>
+            </div>
+            <div class="overCard">
+                <h2>Accesories</h2>
+                <img src="./src/img/accesories.jpg" alt="Accesories">
+                <button class="moreInfo">More info</button>
+            </div>
         </div>
-        <div class="overCard">
-            <h2>Technology</h2>
-            <img src="./src/img/technology.png" alt="Technology">
-            <button class="moreInfo">More info</button>
-        </div>
-        <div class="overCard">
-            <h2>Accesories</h2>
-            <img src="./src/img/accesories.jpg" alt="Accesories">
-            <button class="moreInfo">More info</button>
+    </section>
+    <section class="cocheRojo">
+        <img src="./src/img/cocherojo.png" alt="Coche Rojo">
+        <div>
+            <h4>Red as tentation</h4>
+            <p>Good design is what drives us, and we're proud to share that Mercedes-Maybach has already won the prestigious Best Design Award 2023, as judged by the world's best product designers.</p>
         </div>
     </section>
 </body>
