Section rueda coche rojo hecha. Responsive hecho.

--- a/ProyectoLandingPage/index.html
+++ b/ProyectoLandingPage/index.html
@@ -138,5 +138,13 @@
             <p>Good design is what drives us, and we're proud to share that Mercedes-Maybach has already won the prestigious Best Design Award 2023, as judged by the world's best product designers.</p>
         </div>
     </section>
+    <section class="ruedaSection">
+        <h4>The Mercedes-Maybach wheel programme</h4>
+        <div>
+            <p>The exclusive Mercedes-Maybach wheel programme, e.g. with optional 53.3 cm (21") Maybach forged wheels in multi-spoke design.</p>
+            <button>Learn More</button>
+        </div>
+        <img src="./src/img/ruedaRojo.png" alt="Rueda coche rojo">
+    </section>
 </body>
 </html>
