--- a/ProyectoLandingPage/index.html
+++ b/ProyectoLandingPage/index.html
@@ -147,4 +147,47 @@
         <img src="./src/img/ruedaRojo.png" alt="Rueda coche rojo">
     </section>
 </body>
+<footer>
+    <div></div>
+    <div>
+        <div class="footerBkg">
+            <p>Ready to own the car of your dreams?. Mercedes-Maybach are now available in available at our dealers by appointment only.</p>
+            <button>CONTACT NOW</button>
+        </div>
+        <div class="footerBlk">
+            <div></div>
+            <div>
+                <ul>
+                    <li>Explorer</li>
+                    <li>Electric bikes</li>
+                    <li>City bikes</li>
+                    <li>Kids' bikes</li>
+                    <li>Accesories</li>
+                    <li>Outlet</li>
+                    <li>Business</li>
+                    <li>Insurance Electric</li>
+                    <li>Size guide</li>
+                </ul>
+                <ul>
+                    <li>About</li>
+                    <li>About us</li>
+                    <li>Journal</li>
+                    <li>Reviews</li>
+                    <li>Press</li>
+                    <li>Jobs</li>
+                </ul>
+                <ul>
+                    <li>Help</li>
+                    <li>Contact</li>
+                    <li>FAQ</li>
+                    <li>Delivery</li>
+                    <li>Assembly & manuals</li>
+                    <li>Payment options</li>
+                    <li>Privacy policy</li>
+                    <li>Terms & conditions</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </html>
