Footer hecho. Falta responsive.

--- a/ProyectoLandingPage/index.html
+++ b/ProyectoLandingPage/index.html
@@ -148,45 +148,64 @@
     </section>
 </body>
 <footer>
-    <div></div>
-    <div>
-        <div class="footerBkg">
-            <p>Ready to own the car of your dreams?. Mercedes-Maybach are now available in available at our dealers by appointment only.</p>
-            <button>CONTACT NOW</button>
-        </div>
-        <div class="footerBlk">
-            <div></div>
-            <div>
-                <ul>
-                    <li>Explorer</li>
-                    <li>Electric bikes</li>
-                    <li>City bikes</li>
-                    <li>Kids' bikes</li>
-                    <li>Accesories</li>
-                    <li>Outlet</li>
-                    <li>Business</li>
-                    <li>Insurance Electric</li>
-                    <li>Size guide</li>
-                </ul>
-                <ul>
-                    <li>About</li>
-                    <li>About us</li>
-                    <li>Journal</li>
-                    <li>Reviews</li>
-                    <li>Press</li>
-                    <li>Jobs</li>
-                </ul>
-                <ul>
-                    <li>Help</li>
-                    <li>Contact</li>
-                    <li>FAQ</li>
-                    <li>Delivery</li>
-                    <li>Assembly & manuals</li>
-                    <li>Payment options</li>
-                    <li>Privacy policy</li>
-                    <li>Terms & conditions</li>
-                </ul>
+    <div class="footerGrey">
+        <p>Ready to own the car of your dreams?. Mercedes-Maybach are now available in available at our dealers by appointment only.</p>
+        <button>CONTACT NOW</button>
+    </div>
+    <div class="footerBlk">
+        <div class="footerSubs">
+            <div class="firstDiv">
+                <p class="title">Join the power.</p>
+                <p class="subtitle">Sign up for our newsletter.</p>
             </div>
+            <form action="#">
+                <div class="emailDiv">
+                    <input type="email" name="email" required placeholder="Enter your email address here">
+                    <button type="submit">Subscribe</button>
+                </div>
+                <div class="checkboxDiv">
+                    <input type="checkbox" name="checkbox" id="checkbox" required>
+                    <label for="checkbox">By signing up, I agree to the <a href="#">privacy policy</a> of Veloretti</label>
+                </div>
+            </form>
+            <div class="socialIcons">
+                <a href="#"><img src="./src/img/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="./src/img/instagram.png" alt="Instagram"></a>
+                <a href="#"><img src="./src/img/youtube.png" alt="YouTube"></a>
+                <a href="#"><img src="./src/img/linkedin.png" alt="LinkedIn"></a>
+                <a href="#"><img src="./src/img/tiktok.png" alt="TikTok"></a>
+            </div>
+        </div>
+        <div class="footerLists">
+            <ul>
+                <li>Explorer</li>
+                <li>Electric bikes</li>
+                <li>City bikes</li>
+                <li>Kids' bikes</li>
+                <li>Accesories</li>
+                <li>Outlet</li>
+                <li>Business</li>
+                <li>Insurance Electric</li>
+                <li>Size guide</li>
+            </ul>
+            <ul>
+                <li>About</li>
+                <li>About us</li>
+                <li>Journal</li>
+                <li>Reviews</li>
+                <li>Press</li>
+                <li>Jobs</li>
+            </ul>
+            <ul>
+                <li>Help</li>
+                <li>Contact</li>
+                <li>FAQ</li>
+                <li>Delivery</li>
+                <li>Assembly & manuals</li>
+                <li>Payment options</li>
+                <li>Privacy policy</li>
+                <li>Terms & conditions</li>
+            </ul>
         </div>
     </div>
 </footer>
